WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240366
Web Inspector: Regression(
r266885
) Crash sometimes when rehydrating imported audit results
https://bugs.webkit.org/show_bug.cgi?id=240366
Summary
Web Inspector: Regression(r266885) Crash sometimes when rehydrating imported ...
Patrick Angle
Reported
2022-05-12 17:55:43 PDT
<
rdar://93116306
>
Attachments
Patch v1.0
(8.45 KB, patch)
2022-05-12 18:45 PDT
,
Patrick Angle
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick Angle
Comment 1
2022-05-12 18:45:20 PDT
Created
attachment 459270
[details]
Patch v1.0
EWS Watchlist
Comment 2
2022-05-12 18:47:17 PDT
This patch modifies the inspector protocol. Please ensure that any frontend changes appropriately use feature checks for new protocol features.
Devin Rousso
Comment 3
2022-05-13 15:36:54 PDT
Comment on
attachment 459270
[details]
Patch v1.0 r=me
EWS
Comment 4
2022-05-16 08:53:19 PDT
Committed
r294234
(
250592@main
): <
https://commits.webkit.org/250592@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459270
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-05-16 08:54:14 PDT
<
rdar://problem/93347915
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug